--- a/src/Components/Diagonal.css
+++ b/src/Components/Diagonal.css
@@ -4,13 +4,22 @@
     width: 100vw;
     position: relative;
 }
+.explore{
+    width: fit-content;
+  position: absolute;
+  bottom: 8%;
+  right: 0;
+}
+.register-marquee{
+    position: absolute;
+    top: 50%;
+}
 .diagonal{
     position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
-  border-style: solid;
-  border-width: 0 0 100vw 100vw;
-  border-color: transparent transparent #000 transparent;
+  height: 100%;
+  background:linear-gradient(153deg, rgba(0,0,0,0) 50%, #000 50% );
+
 }
